@@ -1,28 +1,0 @@
-cat("Show how grchk works\n")
-
-require(numDeriv)
-require(optimx)
-
-jones<-function(xx){
-  x<-xx[1]
-  y<-xx[2]
-  ff<-sin(x*x/2 - y*y/4)*cos(2*x-exp(y))
-  ff<- -ff
-}
-
-jonesg <- function(xx) {
-  x<-xx[1]
-  y<-xx[2]
-  gx <-  cos(x * x/2 - y * y/4) * ((x + x)/2) * cos(2 * x - exp(y)) - 
-    sin(x * x/2 - y * y/4) * (sin(2 * x - exp(y)) * 2)
-  gy <- sin(x * x/2 - y * y/4) * (sin(2 * x - exp(y)) * exp(y)) - cos(x * 
-                                                                        x/2 - y * y/4) * ((y + y)/4) * cos(2 * x - exp(y))
-  gg <- - c(gx, gy)
-}
-
-xx <- c(1, 2)
-
-gcans <- grchk(xx, jones, jonesg, trace=1, testtol=(.Machine$double.eps)^(1/3))
-gcans
-
-
